Further spec changes

--- a/spec/coursework2.tex
+++ b/spec/coursework2.tex
@@ -140,14 +140,14 @@ This branch includes the following additions to your setup:
 \begin{itemize}
 	\itemsep1pt\parskip0pt\parsep0pt
 	\item
-	A notebook \verb+BatchNormalizationLayer_tests+ which includes 
+	A notebook \verb+BatchNormalizationLayer_tests.ipynb+ which includes 
 	test functions to check the implementations of the BatchNorm layer
 	\texttt{fprop}, \texttt{bprop} and \texttt{grads\_wrt\_params}
 	methods. The BatchNormalizationLayer skeleton code can be found in mlp.layers. 
 	The tests use the mlp.layers implementation so be sure to reload your notebook
 	when you update your mlp.layers code.
 	\item
-	A notebook \verb+Convolutional_layer_tests+ which includes
+	A notebook \verb+ConvolutionalLayer_tests.ipynb+ which includes
 	test functions to check the implementations of the Convolutional layer
 	\texttt{fprop}, \texttt{bprop} and \texttt{grads\_wrt\_params}
 	methods. The ConvolutionalLayer skeleton code can be found in mlp.layers. 
