--- a/notebooks/Introduction_to_tensorflow.ipynb
+++ b/notebooks/Introduction_to_tensorflow.ipynb
@@ -267,8 +267,8 @@
    "outputs": [],
    "source": [
     "import data_providers as data_providers\n",
-    "train_data = data_providers.EMNISTDataProvider('train', batch_size=50, flatten=True)\n",
-    "valid_data = data_providers.EMNISTDataProvider('valid', batch_size=50, flatten=True)"
+    "train_data = data_providers.EMNISTDataProvider('train', batch_size=50, flatten=True, one_hot=True)\n",
+    "valid_data = data_providers.EMNISTDataProvider('valid', batch_size=50, flatten=True, one_hot=True)"
    ]
   },
   {
